--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "npx eslint ./src"
+    "lint": "npx eslint ./src"
   },
   "eslintConfig": {
     "extends": [
