--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,6 +10,7 @@ jobs:
         run: npm ci
   lint:
     runs-on: ubuntu-latest
+    needs: prepare
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
@@ -19,6 +20,7 @@ jobs:
         run: npm run lint
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
