--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,7 +2,7 @@ name: Build React App
 on:
   workflow_dispatch:
   pull_request:
-    types: [opened, edited, reopened]
+    types: [opened, synchronize, reopened]
 jobs:
   prepare:
     runs-on: ubuntu-latest
