--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,11 +33,20 @@ jobs:
       - name: Lint
         run: npm run lint
   build:
-    runs-on: ubuntu-latest
     needs: [lint, prepare]
+    continue-on-error: true
+    strategy:
+      matrix:
+        node-version: [14, 16]
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Get repository code
         uses: actions/checkout@v3
+      - name: Install Node JS
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: Cache deps
         uses: actions/cache@v3
         with:
